--- a/public/index.html
+++ b/public/index.html
@@ -361,8 +361,8 @@
     <header class="article-header">
         <div class="article-image">
             <a href="/p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%81%AB%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/">
-                <img src="/p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/main_hu_b8b180334a08c6e1.jpg"
-                        srcset="/p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/main_hu_b8b180334a08c6e1.jpg 800w, /p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/main_hu_60a870b3d6aa8eda.jpg 1600w"
+                <img src="/p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%81%AB%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/main_hu_b8b180334a08c6e1.jpg"
+                        srcset="/p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%81%AB%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/main_hu_b8b180334a08c6e1.jpg 800w, /p/%E6%B5%B7%E3%81%BB%E3%81%9F%E3%82%8B%E3%81%AB%E3%83%89%E3%83%A9%E3%82%A4%E3%83%96%E8%A1%8C%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F/main_hu_60a870b3d6aa8eda.jpg 1600w"
                         width="800" 
                         height="1067" 
                         loading="lazy"
@@ -422,7 +422,7 @@
 
 
                 <time class="article-time--reading">
-                    読了時間: 1分
+                    読了時間: 4分
                 </time>
             </div>
         
